--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^0.15.3",
     "express": "^4.14.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "material-ui": "^0.17.3",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.3.1"
   },
   "devDependencies": {
