--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^15.5.3",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.0",
+    "react-swipeable-views": "^0.12.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.3.1"
   },
