--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.13"
+    "webpack": "^1.12.13",
+    "worker-loader": "^0.8.0"
   }
 }
